--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-intersection-observer": "^9.13.1",
     "react-syntax-highlighter": "^15.6.1",
     "stripe": "^17.4.0",
     "superjson": "^2.2.1",
