--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "hono": "^4.5.5",
     "lucide-react": "^0.456.0",
     "next": "^14.2.8",
-    "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
@@ -55,7 +54,11 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "schema": "./prisma/schema.prisma"
   }
 }
